# pakalon-cli

./: .gitignore  README.md  docker-compose-security.yml  docker-compose.security.yml  help.txt  logo.txt  logo_block_font.txt  logo_simple.txt  logo_simple3d.txt  logo_simple_font.txt  logo_tiny.txt  package.json  pyproject.toml  tsconfig.json
.pakalon/: gitleaks-results.json  semgrep-results.json  settings.json
.pakalon/scripts/: check_security_headers.py
.pakalon/snapshots/: 1773471465360_5db49d6e-e065-4fca-b303-cd6aeff5d5d7.json  1773471483362_e705e272-6560-4813-8a6a-83886a1fc770.json  1773471500445_92ee2d33-2596-4ab0-a712-2aaf26ee1a4f.json  1773471513174_e969097e-dfc5-4ded-8ea9-af7573219499.json  1773471522337_21aebe23-4b48-4d10-9707-f40341bc8efb.json  1773474877034_037ccd10-2e55-4e3e-adbd-779ba63b9c95.json  1773476671032_287dd7da-319a-47c2-892e-b215037fe90d.json  1773500976685_55878f03-349c-4453-add5-f962de76972d.json  1773506141532_5efed48e-ad78-49ef-8f9b-73780ae1b3cd.json  1773561759418_91feea64-6735-436d-b7b4-c3c6fe4423b6.json
app/: __init__.py  main.py
assets/: load-animation.asciimtn
assets/Video-animation/: loading-animation.tsx
assets/text-animation/: ink-black.tsx
assets/video-animation/: mini-logo (1).tsx  mini-logo.tsx
python/: README.md  penpot-compose.yml  requirements.txt
python/agents/: __init__.py  sync.js
python/bridge/: server.py
python/memory/: __init__.py  chroma_client.py  lance_client.py  mem0_client.py
python/scripts/: __init__.py  seed_rag_corpus.py
scripts/: postinstall.js
src/: app.tsx  index.tsx
src/ai/: hooks.ts  (+10 more)
(+181 files in other folders)
